modified:   Hari 3/public/css/style.css 	modified:   Hari 3/public/index.html 	new file:   Hari 3/src/assets/farcapital.jpg 	new file:   Hari 3/src/assets/gambar.png 	new file:   Hari 3/src/assets/gambar2.png

--- a/Hari 3/public/index.html
+++ b/Hari 3/public/index.html
@@ -1,15 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kelas Matrikulasi UMPTN</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-    <h1 class="text-5xl font-bold text-red-500 text-center">Hello UMPTN</h1>
-    <a href="#" class="bg-green-800 text-white inline-block m-3 p-3 rounded shadow hover:bg-green-400">ini tombol</a>
-    <p class="m-3 bg-yellow-500">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate ex consequuntur expedita officia alias eos nulla aspernatur vitae distinctio blanditiis consequatur veniam assumenda porro, natus, sint nihil tempora tenetur velit? Cum eum dolore odit provident ipsa. Quam aliquam ipsam similique eligendi. Animi nemo iste mollitia porro, corrupti quas quidem aliquid.</p>
-</body>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <div class="text-center mt-14 text-black">
+      <div class="font-serif font-bold">
+        <p>Ujian Masuk Perusahaan</p>
+        <p>Teknologi Nasioanl</p>
+      </div>
+      <p class="font-thin mt-5 mb-3">Pendaftaran Ujian Masuk Perusahaan Teknologi Nasional Dibuka/</p>
+      <p class="font-thin">Daftar Sekarang</p>
+    </div>
+    <div class="my-32">
+      <img src="../src/assets/gambar.png" alt="Gambar" class="w-auto mx-auto block mb-32" />
+      <div class="w-auto mx-auto bg-white md:max-w-4xl">
+        <div class="md:flex">
+          <div class="md:shrink-0">
+            <img class="md:h-full md:w-96" src="../src/assets/gambar2.png" alt="Modern building architecture" />
+          </div>
+          <div class="p-8">
+            <div class="uppercase tracking-wide text-black font-bold text-2xl">Apa itu UMPTN</div>
+            <p class="mt-2 text-slate-500 text-lg">Kegiatan seleksi yang ditujukan untuk menyaring talenta digital yang siap diserap oleh perusahaan teknologi nasional</p>
+          </div>
+        </div>
+      </div>
+      <p class="text-center font-thin text-xl mt-14">Program</p>
+      <div class="block p-6 max-w-xs bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700 mx-auto mt-12">
+        <img src="../src/assets/farcapital.jpg" alt="farcapital.jpg" class="h-36 w-auto mx-auto" />
+        <div class="text-center">
+          <p class="font-bold py-5 dark:text-gray-300">Ujian masuk Far Capital</p>
+          <p class="font-normal text-gray-700 dark:text-gray-400 mx-4">Reqrutment Software Developer untuk FAR Capital Malaysia dengan stack yang diujikan PHP dan Node.js</p>
+          <div class="shadow border-black hover:bg-slate-300 mx-10 my-6">Daftar Sekarang</div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
